# busmasterjc

./: EXPORT_README.md  MODERNIZATION_PLAN.md  analyze_issues.py  export_github_data.py  export_github_data.sh  export_github_data_detailed.py
.kiro/specs/busmaster-rust-conversion/: design.md  requirements.md  tasks.md
WebInterface/: README.md
WebInterface/backend/: data_access.py  main.py
WebInterface/frontend/: app.js  index.html  style.css
busmaster-rust/: .editorconfig  .gitignore  CANFD_BUG_DEFERRED.md  CONTRIBUTING.md  Cargo.toml  DEMO_INSTRUCTIONS.md  ETAS_BOA_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS_CHECKPOINT.md  QUICKSTART_CLI.md  QUICKSTART_TUI.md  README.md  READY_FOR_TASK_3_4.md  TASK_3_4_ALTERNATIVES.md  TESTING_GUIDE.md  TUI_TEST_MODE_COMPLETE.md  WELCOME.md  clippy.toml  codecov.yml  deny.toml  rust-toolchain.toml  rustfmt.toml  test_basic.sh
busmaster-rust/.cargo/: config.toml
busmaster-rust/.github/: dependabot.yml
busmaster-rust/.github/workflows/: bench.yml  ci.yml  coverage.yml  release.yml
busmaster-rust/crates/busmaster-benches/: Cargo.toml
busmaster-rust/crates/busmaster-benches/benches/: frame_bench.rs
busmaster-rust/crates/busmaster-benches/src/: lib.rs
busmaster-rust/crates/busmaster-cli/: Cargo.toml  QA_TEST_RESULTS.md  README.md
busmaster-rust/crates/busmaster-cli/src/: main.rs
busmaster-rust/crates/busmaster-cli/tests/: integration_test.rs
busmaster-rust/crates/busmaster-core/: Cargo.toml
busmaster-rust/crates/busmaster-core/benches/: filter_bench.rs
busmaster-rust/crates/busmaster-core/proptest-regressions/: frame.txt  signal.txt
busmaster-rust/crates/busmaster-core/src/: error.rs  filter.rs  frame.rs  lib.rs  signal.rs
busmaster-rust/crates/busmaster-db/: Cargo.toml
busmaster-rust/crates/busmaster-db/src/: a2l.rs  arxml.rs  dbc.rs  dbf.rs  ecu_database.rs  ldf.rs  lib.rs  odx.rs
busmaster-rust/crates/busmaster-db/tests/: diagnostic_test.rs  qa_investigation.rs
busmaster-rust/crates/busmaster-dil/: Cargo.toml
busmaster-rust/crates/busmaster-dil/src/: lib.rs
busmaster-rust/crates/busmaster-engine/: Cargo.toml
busmaster-rust/crates/busmaster-engine/src/: engine.rs  error.rs  lib.rs  subscription.rs
busmaster-rust/crates/busmaster-engine/tests/: mvp_integration.rs
busmaster-rust/crates/busmaster-gui/: Cargo.toml
busmaster-rust/crates/busmaster-gui/src/: app.rs  lib.rs  main.rs  state.rs  tests.rs  theme.rs
busmaster-rust/crates/busmaster-gui/src/panels/: database_browser.rs  diagnostics.rs  message_view.rs  mod.rs  signal_graph.rs  signal_watch.rs  status_bar.rs  toolbar.rs
busmaster-rust/crates/busmaster-gui/src/widgets/: about_dialog.rs  database_dialog.rs  filter_dialog.rs  logging_dialog.rs  mod.rs  settings_dialog.rs
busmaster-rust/crates/busmaster-hardware/: Cargo.toml
busmaster-rust/crates/busmaster-hardware/examples/: virtual_bus_server.rs
busmaster-rust/crates/busmaster-hardware/src/: lib.rs  stub.rs
busmaster-rust/crates/busmaster-hardware/src/virtual/: bus.rs  driver.rs  mod.rs  protocol.rs
busmaster-rust/crates/busmaster-hardware/tests/: virtual_integration.rs
busmaster-rust/crates/busmaster-log/: Cargo.toml
busmaster-rust/crates/busmaster-log/src/: asc.rs  blf.rs  lib.rs  pcap.rs
busmaster-rust/crates/busmaster-platform/: Cargo.toml
busmaster-rust/crates/busmaster-platform/src/: lib.rs  macos.rs
busmaster-rust/crates/busmaster-proto/: Cargo.toml
busmaster-rust/crates/busmaster-proto/proptest-regressions/: can.txt
busmaster-rust/crates/busmaster-proto/src/: calibration.rs  can.rs  doip.rs  j1939.rs  lib.rs  lin.rs  obd2.rs  someip.rs  uds.rs  xcp.rs
busmaster-rust/crates/busmaster-tui/: Cargo.toml  README.md
busmaster-rust/crates/busmaster-tui/src/: main.rs
busmaster-rust/docs/: AI_DEVELOPMENT_ROI_REPORT.md  ARCHITECTURE.md  BUG_REPORT_2026-01-26.md  CHANGELOG.md  CLI_IMPLEMENTATION.md  DBC_PARSER_BUG_ANALYSIS.md  DBC_PARSER_FIX_SUMMARY.md  ENGINE_IMPLEMENTATION.md  MESSAGE_FILTERING_IMPLEMENTATION.md  PROJECT_REVIEW.md  README.md  TUI_IMPLEMENTATION.md  UI_REQUIREMENTS_DRAFT.md
busmaster-rust/docs/decisions/: 001-workspace-structure.md
busmaster-rust/docs/dev-journal/: 2026-01-26-session2.md  2026-01-26-session3.md  2026-01-26-session4.md  2026-01-26-session5.md  2026-01-26-session6.md  2026-01-26-session7.md  2026-01-26.md
busmaster-rust/docs/reference/: BUSMASTER_DEPENDENCIES.md
busmaster-rust/docs/traceability/: requirements-mapping.md
busmaster-rust/examples/: test.dbc
busmaster-web/: .gitignore  BUILD_INSTRUCTIONS.md  GETTING_STARTED.md  INSTALL_NODEJS.md  LLM_HANDOVER_PROMPT.md  PHASE1_STAGE3_COMPLETE.md  PHASE1_SUMMARY.md  PROJECT_STATUS_REPORT.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  START_BUSMASTER_WEB.bat
busmaster-web/core/: CMakeLists.txt  README.md
busmaster-web/core/include/: BusmasterTypes.h  IDriverInterface.h
busmaster-web/core/src/: VirtualCANDriver.cpp  VirtualCANDriver.h
busmaster-web/docker/: Dockerfile.server  Dockerfile.ui  docker-compose.yml  nginx.conf
busmaster-web/server/: binding.gyp  env.example  package.json
busmaster-web/server/src/: index.ts
busmaster-web/server/src/api/: routes.ts
busmaster-web/server/src/middleware/: errorHandler.ts
busmaster-web/server/src/native/: busmaster_addon.cpp  driver_wrapper.cpp  driver_wrapper.h
busmaster-web/server/src/utils/: logger.ts
busmaster-web/tests/: README.md  package.json  playwright.config.ts  setup.ts  vitest.config.ts
busmaster-web/tests/backend/: connection.test.ts  driver.test.ts
busmaster-web/tests/e2e/: user-workflow.spec.ts
busmaster-web/tests/frontend/: Dashboard.test.tsx
busmaster-web/tests/integration/: message-flow.test.ts
busmaster-web/web-ui/: index.html  package.json  tsconfig.json  vite.config.ts
busmaster-web/web-ui/src/: App.tsx  index.css  main.tsx  store.ts  theme.ts
github_export/: issues.csv  pull_requests.csv  pull_requests.json  summary.json
github_export_detailed/: export_summary.json  issues_conversations.csv  issues_summary.csv  issues_with_comments.json
(+16 files in other folders)
