[package]
name = "busmaster-core"
description = "Core types and traits for BUSMASTER"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "filter_bench"
harness = false
