[package]
name = "busmaster-db"
description = "Database file parsers for BUSMASTER (DBC, DBF, LDF, etc.)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
busmaster-core = { path = "../busmaster-core" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
nom = "7.1"

[dev-dependencies]
proptest.workspace = true
