[package]
name = "busmaster-gui"
version = "0.1.0"
edition = "2021"
description = "BUSMASTER GUI application using egui"
license = "LGPL-3.0"
repository = "https://github.com/AeroStun/busmaster"
keywords = ["can", "automotive", "gui", "egui"]
categories = ["gui", "development-tools"]

[dependencies]
# GUI framework
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_plot = "0.29"

# BUSMASTER crates
busmaster-core = { path = "../busmaster-core" }
busmaster-db = { path = "../busmaster-db" }
busmaster-dil = { path = "../busmaster-dil" }
busmaster-engine = { path = "../busmaster-engine" }
busmaster-hardware = { path = "../busmaster-hardware" }
busmaster-log = { path = "../busmaster-log" }
busmaster-proto = { path = "../busmaster-proto" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Utilities
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Testing

[features]
default = []
