[package]
name = "busmaster-proto"
description = "Protocol implementations for BUSMASTER"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
busmaster-core = { path = "../busmaster-core" }
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
